--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,6 @@ html,body{
 	width: 100%;
 	height: 100%;
 	min-width: 1280px;
-	min-height: 872px;
 	position: relative;
 }
 html,body,div,ul,li,img,p,h2,span
@@ -10,11 +9,10 @@ html,body,div,ul,li,img,p,h2,span
     margin: 0;
     padding: 0;
 }
-
 /***header 开始 ***/
 .header
 {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 78px;
     background-color: #ed871b;   
