--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ html, body {
 }
 
 .department-sprite, #department section.section-1 .arrow, #department section.section-2 .arrow, #department section.section-3 .arrow, #department section.section-4 .arrow {
-  background-image: url('../images/sprite-department.png');
+  background-image: url('../images/service/department/sprite-department.png');
   background-repeat: no-repeat;
 }
 
@@ -71,6 +71,7 @@ html, body {
 #department section {
   float: left;
   position: relative;
+  background-size: 100% 100%;
 }
 #department section.section-1 {
   width: 639px;
@@ -259,4 +260,64 @@ html, body {
   line-height: 397px;
   color: #fff;
   font-size: 25px;
+}
+@media screen and (max-width:480px){
+  html, body {
+    width: 100%;
+    height: 100%;
+    min-width: 0;
+    min-height: 0;
+    overflow-x: hidden;
+  }
+  #department {
+    width: 100%;
+    height: auto;
+    position: relative;
+    overflow: hidden;
+    left: 0;
+    margin-left: 0;
+    top: 40px;
+  }
+  #department section.section-1,#department section.section-2,#department section.section-3,#department section.section-4{
+    width: 100vw;
+    height: 57vw;
+  }
+  #department section p{
+    line-height: 57vw;
+  }
+  #department section.section-1 .arrow{
+    top: 25.5vw;
+    left: 60vw;
+  }
+  #department section.section-1 .bord {
+    top: 32vw;
+    left: 41vw;
+  }
+
+  #department section.section-2 .arrow{
+    top: 25.5vw;
+    left: 60vw;
+  }
+  #department section.section-2 .bord {
+    top: 32vw;
+    left: 41vw;
+  }
+
+  #department section.section-3 .arrow{
+    top: 25.5vw;
+    left: 65vw;
+  }
+  #department section.section-3 .bord {
+    top: 32vw;
+    left: 36.5vw;
+  }
+
+  #department section.section-4 .arrow{
+    top: 25.5vw;
+    left: 70vw;
+  }
+  #department section.section-4 .bord {
+    top: 32vw;
+    left: 32.5vw;
+  }
 }
