--- a/css/common.css
+++ b/css/common.css
@@ -12,7 +12,7 @@ html,body,div,ul,li,img,p,h2,span
 /***header 开始 ***/
 .header
 {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 78px;
     background-color: #ed871b;   
@@ -49,38 +49,29 @@ html,body,div,ul,li,img,p,h2,span
 .menu
 {
     position: absolute;
+    width: 357px;
     height: 100%;
     right: 0;
     top: 0;
-    z-index: 7890;
+    height: 78px;
+    overflow: hidden;
+    background-color: #ed871b;
+    z-index: 7890;   
 }
-.menu__btnMenuOpen
+.menu__btnMenu
 {
     position: absolute;
     width: 106px;
     height: 78px;
+    top: 0;
     right: 0;
     background: url(../images/common/btnMenuOpen.png) no-repeat center center;
     cursor: pointer;
 }
-.menu__open
-{
-    position: absolute;
-    width: 357px;
-    height: 100%;
-    right: 0;
-    background-color: #ed871b;
-    display: none;
-    overflow: hidden;
-}
+
 .menu__btnMenuClose
 {
-    position: absolute;
-    width: 106px;
-    height: 78px;
-    right: 0;
     background: url(../images/common/btnMenuClose.png) no-repeat center center;
-    cursor: pointer;
 }
 .menu ul
 {
@@ -134,28 +125,17 @@ html,body,div,ul,li,img,p,h2,span
         top: 50%;
         z-index: 7891;
     }
-    /*
     .menu
     {
         width: 100%;
-    }
-    */  
-    .menu__btnMenuOpen
+        height: 40px;
+    }    
+    .menu__btnMenu
     {
         width: 40px;
         height: 40px;
         background-size: 15px 15px;
-    }
-    .menu__open
-    {
-        width: 100vw;
-    }
-    .menu__btnMenuClose
-    {
-        width: 40px;
-        height: 40px;
-        background-size: 15px 15px;
-    }
+    }      
     .menu ul
     {
         margin-top: 40px;    
