--- a/css/common.css
+++ b/css/common.css
@@ -15,11 +15,6 @@ html,body,div,ul,li,img,p,h2,span
     position: absolute;
     width: 100%;
     height: 78px;
-    background-color: #ed871b;   
-}
-.header_transparent
-{
-    background-color: transparent;    
 }
 .header__wrapper
 {
@@ -28,20 +23,19 @@ html,body,div,ul,li,img,p,h2,span
     max-width: 1280px;
     height: 100%;
     margin: 0 auto;
+    border-bottom:solid 1px rgba(148,145,145,0.09);
 }
-.header__wrapper_borderBottom
-{
-    border-bottom: solid 1px #ffffff;
-}
+
 .header__logo
 {
     position: absolute;
-    width: 246px;
-    height: 38px;
-    left: 28px;
-    margin-top: -19px;
-    top: 50%; 
-    background: url(../images/common/logo.png) no-repeat;
+    width: 209px;
+    height: 30px;
+    left: 20px;
+    margin-top: -15px;
+    top: 50%;
+    background-repeat: no-repeat;
+    background-image: url(../images/common/logo.png);
     background-size: contain;
     z-index: 7891;    
 }
@@ -56,12 +50,7 @@ html,body,div,ul,li,img,p,h2,span
     top: 0;
     height: 78px;
     overflow: hidden;
-    background-color: #ed871b;
-    z-index: 7890;   
-}
-.menu__transparent
-{
-    background-color: transparent;    
+    z-index: 7890;
 }
 .menu__btnMenu
 {
@@ -89,7 +78,7 @@ html,body,div,ul,li,img,p,h2,span
     width: 100%;
     height: 2px;
     left: 0px;
-    background-color: #ffffff;
+    background-color: #002e61;
     
     -webkit-transform-origin: left center;
     -moz-transform-origin: left center;
@@ -113,6 +102,10 @@ html,body,div,ul,li,img,p,h2,span
 .menu__btnMenu span:nth-child(3)
 {
     top: 22px;
+}
+.menu__btnMenu.menu__btnMenuClose span
+{
+    background-color: #ffffff;    
 }
 .menu__btnMenu.menu__btnMenuClose span:nth-child(1)
 {
@@ -161,7 +154,7 @@ html,body,div,ul,li,img,p,h2,span
 }
 .menu a:hover
 {
-    background-color: #f6a833;
+    background-color: #3da3dc;
 }
 /***menu 结束 ***/
 
@@ -186,10 +179,10 @@ html,body,div,ul,li,img,p,h2,span
     }  
     .header__logo
     {
-        width: 123px;
-        height: 19px;        
-        margin-left: -61.5px;
-        margin-top: -9.5px;
+        width: 139px;
+        height: 20px;        
+        margin-left: -69.5px;
+        margin-top: -10px;
         left: 50%;
         top: 50%;
     }
