--- a/css/digital.css
+++ b/css/digital.css
@@ -29,7 +29,7 @@ html{
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	background-image: url(../images/service/digital/bg1.png);
+	background-image: url(../images/service/digital/bg1.jpg);
 	background-size:cover ;
 	background-repeat: no-repeat;
 	background-position: center center; 	
@@ -42,7 +42,7 @@ html{
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	background-image: url(../images/service/digital/bg2.png);
+	background-image: url(../images/service/digital/bg2.jpg);
 	background-size:cover ;
 	background-repeat: no-repeat;
 	background-position: center center; 	
@@ -54,7 +54,7 @@ html{
 	top: 0px;
 	width: 100%;
 	height: 100%;
-	background-image: url(../images/service/digital/bg3.png);
+	background-image: url(../images/service/digital/bg3.jpg);
 	background-size:cover ;
 	background-repeat: no-repeat;
 	background-position: center center; 	
