--- a/css/home.css
+++ b/css/home.css
@@ -542,14 +542,6 @@ html,body{
         line-height: 20px;
         height: 60px;
     }
-    .home__bg{
-        width: 100vw;
-        height: 57vw;
-        background-size: 100% 100%;
-        left: 0;
-        margin-left: 0;
-        top: 200px;
-    }
     #home-map{
         transform-origin:0 0;
         -moz-transform:scale(0.4); 
@@ -559,20 +551,14 @@ html,body{
         left: 50%;
         margin-left: -157px;
     }
-    /*.home__bg{
+    .home__bg{
         transform-origin:0 0;
         -moz-transform:scale(0.4); 
         -webkit-transform:scale(0.4);
         -o-transform:scale(0.4);
         transform: scale(0.4);
+        margin-left: -256px;
     }
-    #home-map{
-        transform-origin:0 0;
-        -moz-transform:scale(0.4); 
-        -webkit-transform:scale(0.4);
-        -o-transform:scale(0.4);
-        transform: scale(0.4);
-    }*/
 }
 
 
