--- a/sass/module/_base.scss
+++ b/sass/module/_base.scss
@@ -12,7 +12,6 @@ body img {border:none;}
 .clearfix{clear:both; font-size:0; line-height:0; height:0; border:0; margin:0px; padding:0px;}
 html,body{
 	width: 100%;
-	height: 100%;
-	min-width: 1280px;
-	min-height: 872px;
+    height: 100%;
+    overflow: hidden;
 }
