--- a/css/common.css
+++ b/css/common.css
@@ -4,7 +4,7 @@
 	min-width: 1280px;
 	position: relative;
 }*/
-html,body,div,ul,li,img,p,h2,span
+html,body,div,ul,li,img,p,h2,h3,span
 {
     margin: 0;
     padding: 0;
