--- a/css/studio.css
+++ b/css/studio.css
@@ -9,6 +9,10 @@ html
 {
     font-size: 62.5%;
 }
+.noscroll
+{
+    overflow-y: hidden;
+}
 /*** studio 开始 ***/
 .studio
 {
@@ -279,17 +283,23 @@ html
     .studio__cards
     {
         overflow-y: visible;   
-    }    
+    }
+    
+    .studio__card__details
+    {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #ffda06;
+        z-index: 7891;
+    }      
     .studio__card
     {
         width: 100%;
         height: 100%;       
     }
-    .studio__card__detail
-    {        
-        height: auto;
-        overflow-y: visible;
-    }
+            
     .studio__card__detail__headimg
     {
         height: 150px;
