--- a/css/studio.css
+++ b/css/studio.css
@@ -97,7 +97,8 @@ html
 }
 .studio__cards
 {
-    position: absolute;   
+    position: absolute;
+    width: 100%;
     height: 100%;
     background-color: #1c65b0;
     overflow-y: auto;    
@@ -109,6 +110,10 @@ html
     width: calc(50% - 10px);
     overflow: hidden;
     cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    
 }
 .studio__card:after/*important for mouseover event handler*/
 {
@@ -179,7 +184,9 @@ html
 {
     position: relative;
     height: 375px;
-    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
 }
 .studio__card__detail__headimg>img
 {
@@ -289,12 +296,12 @@ html
     {
         width: 100%;
         height: 100%;       
-    }
+    }/*
     .studio__card_over
     {
         opacity: 1;
         background-color: transparent;
-    }
+    }*/
        
     .studio__card__details
     {
