--- a/css/studio.css
+++ b/css/studio.css
@@ -297,13 +297,8 @@ html
     {
         width: 100%;
         height: 100%;       
-    }/*
-    .studio__card_over
-    {
-        opacity: 1;
-        background-color: transparent;
-    }*/
-       
+    }
+    
     .studio__card__details
     {
         position: fixed;
