--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,13 @@
 html,body{
     width: 100%;
     height: 100%;
+    overflow: hidden;
+}
+#homeWrapper{
+    width: 100%;
+    height: auto;
+    position: relative;
+    margin-top: 78px;
 }
 .home
 {
@@ -13,13 +20,12 @@ html,body{
     height: 968px;
     left: 50%;
     margin-left: -640px;
+    top: 50%;
 }
 .home__headline
 {
     color: #023062;
-    font-size: 48px;
     text-align: center;
-    line-height: 104px;
     moz-user-select: -moz-none;
     -moz-user-select: none;
     -o-user-select:none;
@@ -28,6 +34,9 @@ html,body{
     -ms-user-select:none;
     user-select:none;
 }
+.main_copy{
+    font-size: 48px;
+}
 .home__copy
 {
     color: #435152;
@@ -35,6 +44,7 @@ html,body{
     text-align: center;
     line-height: 25px;
     height: 50px;
+    margin-top: 20px;
     moz-user-select: -moz-none;
     -moz-user-select: none;
     -o-user-select:none;
@@ -527,20 +537,24 @@ html,body{
 
 
 @media screen and (max-width:480px){
+    #homeWrapper{
+        margin-top: 40px;
+    }
     .home{
         width: 100vw;
         height: 550px;
         margin-left: -50vw;
         min-height:0;
+        margin-top: -275px;
     }
-    .home__headline{
+    .main_copy{
         font-size: 24px;
-        line-height: 52px;
     }
     .home__copy{
         font-size: 12px;
         line-height: 20px;
-        height: 60px;
+        margin-top: 10px;
+        height: 40px;
     }
     #home-map{
         transform-origin:0 0;
