--- a/sass/module/_sprite.scss
+++ b/sass/module/_sprite.scss
@@ -1,3 +1,3 @@
-// @import "department/*.png";
-// $department-layout:smart;
-// $department-sprite-dimensions: true;
+@import "txt/*.png";
+$txt-layout:smart;
+$txt-sprite-dimensions: true;
