--- a/sass/service.scss
+++ b/sass/service.scss
@@ -1,8 +1,6 @@
 @import 'compass';
 @import 'compass/layout';
 
-// @import 'module/base';
-
-// @import 'module/sprite';
+@import 'module/sprite';
 
 @import 'module/main';
