--- a/css/service.css
+++ b/css/service.css
@@ -1,3 +1,8 @@
+.txt-sprite, #department section.section-1 .c-txt-1, #department section.section-1 .c-txt-1.txtHover, #department section.section-2 .c-txt-2, #department section.section-2 .c-txt-2.txtHover, #department section.section-3 .c-txt-3, #department section.section-3 .c-txt-3.txtHover, #department section.section-4 .c-txt-4, #department section.section-4 .c-txt-4.txtHover {
+  background-image: url('../images/service/main/sprite-txt.png');
+  background-repeat: no-repeat;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -19,66 +24,114 @@ html, body {
 #department section.section-1 {
   width: 639px;
   height: 397px;
-  background-image: url('../images/service/main/or_1.jpg');
-  background-repeat: no-repeat;
   cursor: pointer;
-  background-size: cover;
-  background-position: center center;
+  overflow: hidden;
 }
-#department section.section-1.hover {
-  background-image: url('../images/service/main/or_1_hover.jpg');
-  background-repeat: no-repeat;
+#department section.section-1 .c-txt-1 {
+  background-position: 0 0;
+  height: 35px;
+  width: 175px;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  margin-top: -17.5px;
+  margin-left: -87.5px;
 }
-#department section.section-1.hover .btm-txt, #department section.section-1.hover .arrow, #department section.section-1.hover .bord {
-  display: block;
+#department section.section-1 .c-txt-1.txtHover {
+  background-position: 0 -35px;
+  height: 35px;
+  width: 175px;
+}
+#department section.section-1 img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
 }
 #department section.section-2 {
   width: 639px;
   height: 397px;
-  background-image: url('../images/service/main/or_2.jpg');
-  background-repeat: no-repeat;
   cursor: pointer;
-  background-size: cover;
-  background-position: center center;
+  overflow: hidden;
 }
-#department section.section-2.hover {
-  background-image: url('../images/service/main/or_2_hover.jpg');
-  background-repeat: no-repeat;
+#department section.section-2 .c-txt-2 {
+  background-position: 0 -70px;
+  height: 35px;
+  width: 175px;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  margin-top: -17.5px;
+  margin-left: -87.5px;
 }
-#department section.section-2.hover .btm-txt, #department section.section-2.hover .arrow, #department section.section-2.hover .bord {
-  display: block;
+#department section.section-2 .c-txt-2.txtHover {
+  background-position: 0 -105px;
+  height: 35px;
+  width: 175px;
+}
+#department section.section-2 img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
 }
 #department section.section-3 {
   width: 639px;
   height: 397px;
-  background-image: url('../images/service/main/or_3.jpg');
-  background-repeat: no-repeat;
   cursor: pointer;
-  background-size: cover;
-  background-position: center center;
+  overflow: hidden;
 }
-#department section.section-3.hover {
-  background-image: url('../images/service/main/or_3_hover.jpg');
-  background-repeat: no-repeat;
+#department section.section-3 .c-txt-3 {
+  background-position: 0 -140px;
+  height: 35px;
+  width: 175px;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  margin-top: -17.5px;
+  margin-left: -87.5px;
 }
-#department section.section-3.hover .btm-txt, #department section.section-3.hover .arrow, #department section.section-3.hover .bord {
-  display: block;
+#department section.section-3 .c-txt-3.txtHover {
+  background-position: 0 -175px;
+  height: 35px;
+  width: 175px;
+}
+#department section.section-3 img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
 }
 #department section.section-4 {
   width: 639px;
   height: 397px;
-  background-image: url('../images/service/main/or_4.jpg');
-  background-repeat: no-repeat;
   cursor: pointer;
-  background-size: cover;
-  background-position: center center;
+  overflow: hidden;
 }
-#department section.section-4.hover {
-  background-image: url('../images/service/main/or_4_hover.jpg');
-  background-repeat: no-repeat;
+#department section.section-4 .c-txt-4 {
+  background-position: 0 -210px;
+  height: 35px;
+  width: 175px;
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  margin-top: -17.5px;
+  margin-left: -87.5px;
 }
-#department section.section-4.hover .btm-txt, #department section.section-4.hover .arrow, #department section.section-4.hover .bord {
-  display: block;
+#department section.section-4 .c-txt-4.txtHover {
+  background-position: 0 -245px;
+  height: 35px;
+  width: 175px;
+}
+#department section.section-4 img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
 }
 #department section p {
   width: 100%;
@@ -108,49 +161,17 @@ html, body {
     width: 100vw;
     height: 57vw;
   }
-  #department section.section-1 .arrow {
-    top: 25.5vw;
-    left: 60vw;
-  }
-  #department section.section-1 .bord {
-    top: 32vw;
-    left: 41vw;
-  }
   #department section.section-2 {
     width: 100vw;
     height: 57vw;
-  }
-  #department section.section-2 .arrow {
-    top: 25.5vw;
-    left: 60vw;
-  }
-  #department section.section-2 .bord {
-    top: 32vw;
-    left: 41vw;
   }
   #department section.section-3 {
     width: 100vw;
     height: 57vw;
   }
-  #department section.section-3 .arrow {
-    top: 25.5vw;
-    left: 65vw;
-  }
-  #department section.section-3 .bord {
-    top: 32vw;
-    left: 36.5vw;
-  }
   #department section.section-4 {
     width: 100vw;
     height: 57vw;
-  }
-  #department section.section-4 .arrow {
-    top: 25.5vw;
-    left: 70vw;
-  }
-  #department section.section-4 .bord {
-    left: 32.5vw;
-    top: 32vw;
   }
   #department section p {
     line-height: 57vw;
