--- a/css/studio.css
+++ b/css/studio.css
@@ -33,14 +33,14 @@ html
     height: 100%;
     background-color: rgba(28, 101, 176, 0.98);
     box-sizing: border-box;
-    padding:0 4.5rem;    
+    padding:0 1rem;    
     overflow: hidden;
 }
 .studio__left>h2
 {
     padding-top: 13rem;
     padding-bottom: 4.5rem;
-    font-size: 9.6rem;
+    font-size: 4.6rem;/*the smallest font-size for 960 width*/
     font-weight: 100;
     word-break: break-all;    
 }
@@ -82,7 +82,7 @@ html
 .studio__btnLeft
 {
     position: absolute;
-    left: 4.5rem;
+    left: 1rem;
     top: 3.2rem;
     width: 41px;
     height: 36px;
@@ -220,24 +220,77 @@ html
 }
 /*** studio__card__detail 结束***/
 
-
-@media screen and (max-width:1280px)
+/*** pc宽度 **/
+@media screen and (min-width:1920px)
 {
-    .studio__left
-    {
-        padding:0 1rem;
-    }
     .studio__left>h2
     {
-        font-size: 8rem;
-    }
+        font-size: 8.2rem;
+    } 
+    .studio__left
+    {
+        padding:0 4.5rem;    
+    }    
     .studio__btnLeft
     {
-        left: 1rem;
-    }             
+        left: 4.5rem;        
+    }
+}
+@media screen and (max-width:1440px)
+{
+    .studio__left>h2
+    {
+        font-size: 7rem;
+    }    
+}
+
+@media screen and (max-width:1366px)
+{
+    .studio__left>h2
+    {
+        font-size: 6.5rem;
+    }    
+}
+
+@media screen and (max-width:1024px)
+{
+    .studio__left>h2
+    {
+        font-size: 5rem;
+    }    
+}
+
+@media screen and (max-width:960px)
+{
+    .studio__left>h2
+    {
+        font-size: 4.6rem;
+    }    
 }
 
 
+
+/*** pc高度 ***/
+@media screen and (max-height:800px)
+{
+    .studio__left>h2
+    {
+        padding-top: 3rem;
+        padding-bottom: 1rem;
+    }
+    .studio__left>p
+    {
+        padding-bottom: 2rem;        
+    }
+    .studio__left>a
+    {
+        padding-top: 2rem;
+    }
+    .studio__btnLeft
+    {
+        top: 1rem;        
+    }
+}
 
 @media screen and (max-width:480px)
 {
@@ -253,14 +306,27 @@ html
     .studio__left
     {
         width: 100%;    
-        height: 50%;
-        padding:0 2rem;    
+        height: auto;
+        min-height: 50%;
+        padding:0 2rem 1rem 2rem;
+        z-index: 2;/*same reason as below*/       
     }
+    .studio__left:after/*for DEPARTMENT height bigger than WORK height*/
+    {
+        content:" ";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color:rgba(0,0,0,0);
+        z-index: -1;/*:after should below .studio__left this can stop click .studio__right's cards*/
+}
     .studio__left>h2
     {
-        padding-top: 5rem;
+        padding-top: 2rem;
         padding-bottom: 1rem;
-        font-size: 4.8rem;
+        font-size: 4.2rem;
     }
     .studio__left>p
     {
@@ -277,7 +343,7 @@ html
     .studio__left>a
     {
         font-size: 1.5rem;        
-        padding: 1rem 0;
+        padding-top: 1rem;
     }
     .studio__btnLeft
     {
@@ -288,8 +354,8 @@ html
     
     .studio__right
     {
+        position: relative;
         left: 0;
-        top:50%;
         width: 100%;
         height: 50%;    
     }
@@ -324,14 +390,6 @@ html
     {
         padding: 0 2rem 1.5rem 2rem;
     }             
-}
-
-@media screen and (max-width:320px)
-{
-    .studio__left>h2
-    {
-        padding-top: 1rem;
-    }    
 }
 
 
