--- a/2_1_PREVIEW/_p/templates/template_index.html
+++ b/2_1_PREVIEW/_p/templates/template_index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -15,22 +15,10 @@
   <header> <img src="http://preview.williamsleatag.cn/Preview/public/image/logo.jpg" alt="Tag" id="logo" /> 
     
     <!-- CHANGE CLIENT AND CAMPAIGN NAMES HERE -->
-    <h1 id="client_name">iRobot</h1>
-    <h2 id="campaign_name">iRobot_Braava_jet_JP</h2>
+    <h1 id="client_name">${clientName}</h1>
+    <h2 id="campaign_name">${campaignName}</h2>
   </header>
-  <div id="main">
-            <h3>Everyday</h3>
-                <ul>
-                    <li><a href="Everyday/300x250/index_PREVIEW.html" title="">300X250</a></li>
-                </ul>
-            <h3>Juice</h3>
-                <ul>
-                    <li><a href="Juice/300x250/index_PREVIEW.html" title="">300X250</a></li>
-                </ul>
-            <h3>Kitchen</h3>
-                <ul>
-                    <li><a href="Kitchen/300x250/index_PREVIEW.html" title="">300X250</a></li>
-                </ul>    
+  <div id="main">${uls}    
   </div>
   
   <!-- FOOTER CONTENT DO NOT EDIT -->
@@ -39,4 +27,4 @@
   </footer>
 </div>
 </body>
-</html>
+</html>`
