--- a/css/home.css
+++ b/css/home.css
@@ -190,7 +190,7 @@ html,body{
     margin: 0 auto;
     margin-top: 30px;
     position: relative;
-    -webkit-transform:rotate(0deg)
+    -webkit-transform:rotate(0deg);
 }
 .home__map__wrapper
 {
