--- a/css/contact.css
+++ b/css/contact.css
@@ -192,6 +192,9 @@ p{
         font-size: 0.9rem;
         margin-left: 1.5rem;
     }
+    #contactus .location,#contactus .phone,#contactus .mail{
+        left: 7%;
+    }
 }
 
 
